--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "author": "Jared Null",
     "contributors": ["Don", "Dhaval Katrodiya", "co222", "tumpio", "Doesnt Matter", "Faktor12"],
     "license": "GPLv3",
-    "version": "2.7",
+    "version": "3.1",
     "homepage": "http://www.jarednull.com",
     "icon": "img\\blueswip48.png",
     "icon64": "img\\blueswip64.png",
@@ -13,137 +13,188 @@
         "private-browsing": true
     },
 
-    "preferences": [{
+    "preferences": [
+
+        {
+            "name": "dropdown_autoshow_enabled",
+            "type": "bool",
+            "title": "Enable Drop-Down Auto Show",
+            "description": "Enable the ability to AutoShow Select Tags Drop-Downs. (Kinda Buggy :( Disabled by Default.",
+            "value": false
+        },
+        {
+            "name": "radiobutton_autoselecting_enabled",
+            "type": "bool",
+            "title": "Enable Radio Button Auto Selecting",
+            "description": "Enable the ability to AutoSelect Radio Buttons.",
+            "value": true
+        },
+        {
+            "name": "checkbox_autochecking_enabled",
+            "type": "bool",
+            "title": "Enable Checkbox Auto Checking",
+            "description": "Enable the ability to AutoCheck Checkboxes.",
+            "value": true
+        },
+        {
             "name": "tab_focus_switching_enabled",
             "type": "bool",
             "title": "Enable Tab Switching Focus",
             "description": "Enable the ability to hover over tabs to switch to them.",
             "value": true
-        }, {
+        },
+        {
             "name": "url_focus_enabled",
             "type": "bool",
             "title": "Enable URL Box Auto Selection",
             "description": "Selects URL box text automatically on hover.",
             "value": true
-        }, {
+        },
+        {
             "name": "search_focus_enabled",
             "type": "bool",
             "title": "Enable Search Auto Selection",
             "description": "Selects search box text automatically on hover.",
             "value": true
-        }, {
+        },
+        {
             "name": "font_text_color_preference",
             "type": "bool",
             "title": "Enable Changing Font Color",
             "description": "New Font Text may be easier to see.",
             "value": true
-        }, {
+        },
+        {
             "name": "font_text_color",
             "type": "color",
             "title": "Font Color Selection",
             "description": "Choose a Font Color.",
             "value": "#CC0000"
-        }, {
+        },
+        {
             "name": "element_background_color_preference",
             "type": "bool",
             "title": "Enables Changing Element Background Color",
             "description": "New Background Color is the easiest to see, but can mess the view of a website, so it's been disabled by default.",
             "value": false
-        }, {
+        },
+        {
             "name": "element_background_color",
             "type": "color",
             "title": "Background Color Selection",
             "description": "Choose a Background Color.",
             "value": "#33FFFF"
-        }, {
+        },
+        {
             "name": "element_boarder_highlight_preference",
             "type": "bool",
             "title": "Enable Changing Boarder Color",
             "description": "New Boarder Color can make seeing which elements work with NoClick easier.",
             "value": true
-        }, {
+        },
+        {
             "name": "element_boarder_highlight_color_preference",
             "type": "color",
             "title": "Boarder Color Selection",
             "description": "Choose a Boarder Color.",
             "value": "#6a5acd"
-        }, {
+        },
+        {
             "name": "mouseover_selected_text",
             "type": "bool",
             "title": "Enable Saved Clicked Highlight Selection ",
             "description": "When text is clicked or selected, mouseover will remember without clicking again.",
             "value": true
-        }, {
+        },
+        {
             "name": "all_text_select_mouseout",
             "type": "bool",
             "title": "Select All Text on MouseOut",
             "description": "Enable selecting all text on mouseout.",
             "value": true
-        }, {
+        },
+        {
             "name": "saved_cursor_postion_on_type",
             "type": "bool",
             "title": "Enable Last typed character selection",
             "description": "Saves last character as last cursor position.",
             "value": true
-        }, {
+        },
+        {
             "name": "default_cursor_postion",
             "type": "radio",
             "title": "Select a Cursor Selection Default",
             "description": "Where to always place the cursor?",
             "value": "Alternate",
-            "options": [{
-                "value": "Begin",
-                "label": "Beginning of Text"
-            }, {
-                "value": "Alternate",
-                "label": "Alternate Between Beginning and End"
-            }, {
-                "value": "End",
-                "label": "End of text"
-            }, {
-                "value": "off",
-                "label": "Disable"
-            }]
-        }, {
+            "options": [
+                {
+                    "value": "Begin",
+                    "label": "Beginning of Text"
+                },
+                {
+                    "value": "Alternate",
+                    "label": "Alternate Between Beginning and End"
+                },
+                {
+                    "value": "End",
+                    "label": "End of text"
+                },
+                {
+                    "value": "off",
+                    "label": "Disable"
+                }
+            ]
+        },
+        {
             "hidden": true,
             "type": "bool",
             "name": "boardercolorenable",
             "title": "Enable Element Text Color",
             "description": "Enable color highlighting for all input elements.",
             "value": true
-        }, {
+        },
+        {
             "hidden": true,
             "name": "BackGroundColor",
             "type": "color",
             "title": "Element Text Color",
             "description": "Select a background color for all input elements.",
             "value": "#6a5acd"
-        }, {
+        },
+        {
             "hidden": true,
             "name": "ColorTemplate",
             "type": "menulist",
             "title": "Color Template Combinations for Element Boarders and Element Text",
             "value": 0,
-            "options": [{
-                "value": "1",
-                "label": "Default"
-            }, {
-                "value": "2",
-                "label": "YellowJacket"
-            }, {
-                "value": "3",
-                "label": "1337H4x0r"
-            }, {
-                "value": "4",
-                "label": "BloodOrange"
-            }, {
-                "value": "5",
-                "label": "DragonSlayer"
-            }, {
-                "value": "0",
-                "label": "None"
-            }]
-        }, {
+            "options": [
+                {
+                    "value": "1",
+                    "label": "Default"
+                },
+                {
+                    "value": "2",
+                    "label": "YellowJacket"
+                },
+                {
+                    "value": "3",
+                    "label": "1337H4x0r"
+                },
+                {
+                    "value": "4",
+                    "label": "BloodOrange"
+                },
+                {
+                    "value": "5",
+                    "label": "DragonSlayer"
+                },
+                {
+                    "value": "0",
+                    "label": "None"
+                }
+            ]
+        },
+        {
             "hidden": true,
             "type": "control",
             "label": "Save All Settings",
